--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -1,48 +1,46 @@
 @import '../../variables.scss';
 .footer,
 .footerContainer {
-  @include flex(space-between, center, row);
-  flex-wrap: wrap;
+    @include flex(space-between, center, row);
 }
 
 .footer {
-  width: 100%;
-  height: 141px;
-  background-color: $background3;
-  color: white;
+    width: 100%;
+    height: 141px;
+    background-color: $background3;
+    color: white;
 }
 
 .footerContainer {
-  width: 90%;
-  margin: auto;
-  height: 100%;
+    width: 90%;
+    margin: auto;
+    height: 100%;
 }
 
 .socialMedia {
-  width: 300px;
+    width: 300px !important;
 }
 
 // Media
-
 @media screen and (max-width: 841px) {
-  .footerContainer {
-    p {
-      font-size: 14px;
+    .footerContainer {
+        p {
+            font-size: 14px;
+        }
     }
-  }
 }
 
 @media screen and (max-width: 780px) {
-  .footerContainer {
-    justify-content: space-between;
-    p {
-      font-size: 10px;
-      width: 90px;
-      text-align: center;
+    .footerContainer {
+        justify-content: space-between;
+        p {
+            font-size: 10px;
+            width: 90px;
+            text-align: center;
+        }
     }
-  }
-  .socialMedia {
-    width: 80px;
-    height: 100px;
-  }
+    .socialMedia {
+        width: 80px !important;
+        height: 100px;
+    }
 }
