--- a/src/app/sections/About/About.module.scss
+++ b/src/app/sections/About/About.module.scss
@@ -1,104 +1,101 @@
 @import '../../variables.scss';
-
 .aboutContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 100%;
-  height: 140vh;
-  overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 140vh;
+    overflow: hidden;
 }
+
 .circleLeft,
 .circleRight {
-  --borderWidth: 600px;
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: var(--borderWidth);
-  width: var(--borderWidth);
-  background: $gradient;
-  border-radius: 50%;
-  z-index: -10;
-  animation: animatedgradient 5s ease alternate infinite;
-  background-size: 300% 300%;
-  .background {
+    --borderWidth: 600px;
     position: absolute;
-    width: calc(var(--borderWidth) - 30px);
-    height: calc(var(--borderWidth) - 30px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: var(--borderWidth);
+    width: var(--borderWidth);
+    background: $gradient;
     border-radius: 50%;
-    background-color: white;
-  }
+    z-index: -10;
+    animation: animatedgradient 5s ease alternate infinite;
+    background-size: 300% 300%;
+    .background {
+        position: absolute;
+        width: calc(var(--borderWidth) - 30px);
+        height: calc(var(--borderWidth) - 30px);
+        border-radius: 50%;
+        background-color: white;
+    }
 }
 
 .circleLeft {
-  transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
+
 .circleRight {
-  right: 0;
-  transform: translate(50%, -50%);
+    right: 0;
+    transform: translate(50%, -50%);
 }
 
 .infoWrapper {
-  @include flex(center, center, column);
-  margin: 100px auto 0 auto;
-  height: 40%;
-  width: 60%;
-
-  h4 {
-    font-size: 40px;
-  }
-  p {
-    margin: 90px 0 90px 0;
-    font-size: 18px;
-  }
+    @include flex(space-around, center, column);
+    margin: 100px auto 0 auto;
+    height: 40%;
+    width: 60%;
+    h4 {
+        font-size: 40px;
+    }
+    p {
+        font-size: 18px;
+    }
 }
 
 @keyframes animatedgradient {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 // Media
+@media screen and (max-width: 1368px) {}
 
-@media screen and (max-width: 1368px) {
-}
-
-@media screen and (max-width: 991px) {
-}
+@media screen and (max-width: 991px) {}
 
 @media screen and (max-width: 780px) {
-  .circleLeft,
-  .circleRight {
-    display: none;
-  }
-  .circleLeft {
-    transform: translate(-50%, -350%);
-  }
-  .circleRight {
-    right: 0;
-    transform: translate(50%, -350%);
-  }
-  .aboutContainer {
-    height: 230vh;
-    justify-content: space-between;
-  }
-  .infoWrapper {
-    margin: 0 auto;
-    height: 40%;
-    width: 80%;
-    h4 {
-      font-size: 28px;
+    .circleLeft,
+    .circleRight {
+        display: none;
     }
-    p {
-      font-size: 16px;
+    .circleLeft {
+        transform: translate(-50%, -350%);
     }
-  }
+    .circleRight {
+        right: 0;
+        transform: translate(50%, -350%);
+    }
+    .aboutContainer {
+        height: 230vh;
+        justify-content: space-between;
+    }
+    .infoWrapper {
+        margin: 0 auto;
+        height: 40%;
+        width: 80%;
+        justify-content: space-evenly;
+        h4 {
+            font-size: 28px;
+        }
+        p {
+            font-size: 16px;
+        }
+    }
 }
